--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,8 @@ mixin_extras_version=0.3.6
 # mod
 mod_id=replacememodid
 mod_name=ReplaceMeModName
-mod_version=ReplaceMe.Mod.Version
-mod_author=["ReplaceMeAuthor"]
+mod_version=v1b1
+mod_author=["ExistingEevee"]
 mod_description=ReplaceMeModDescription
 mixin_loader_class=replacememodid.ReplaceMeModNamePlugin
 
